--- a/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginpage"
+    android:background="@drawable/intropage"
     android:orientation="vertical"
     android:weightSum="4">
 
