--- a/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PlanDetail"
     android:background="@drawable/loginpage"
     android:padding="16dp"
@@ -53,6 +55,8 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_gravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/resize_float"
+        app:backgroundTint="@color/common_google_signin_btn_text_light_focused"
+        app:rippleColor="@android:color/white" />
 
 </LinearLayout>
