--- a/SignInWithGoogle/app/src/main/res/layout/activity_set_detail.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_set_detail.xml
@@ -15,11 +15,16 @@
         android:layout_height="0dp"
         android:layout_weight="4">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/buggy" />
+            android:background="#85ffffff"
+            android:fontFamily="@font/enjoy"
+            android:padding="20dp"
+            android:text="세부일정 등록"
+            android:textColor="#000000"
+            android:textSize="50dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -69,11 +74,11 @@
         <EditText
             android:id="@+id/memo"
             android:layout_width="wrap_content"
-            android:layout_height="130dp"
+            android:layout_height="125dp"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/memotxt"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="72dp"
+            android:layout_marginBottom="100dp"
             android:background="#34aeaeae"
             android:ems="10"
             android:fontFamily="@font/enjoy"
