--- a/SignInWithGoogle/app/src/main/res/layout/list_row.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/list_row.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:padding="8dp"
-        android:id="@+id/textview"
+        android:id="@+id/childText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
