--- a/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
@@ -33,7 +33,7 @@
         android:layout_weight="8">
 
         <ExpandableListView
-            android:id="@+id/planDetailListview"
+            android:id="@+id/listview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#97ffffff"
