--- a/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_plan_detail.xml
@@ -31,14 +31,13 @@
         android:layout_weight="8">
 
         <ExpandableListView
-            android:id="@+id/listview"
+            android:id="@+id/listviewDetail"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#97ffffff"
-            android:descendantFocusability="beforeDescendants"
+
             android:divider="#b5d39c"
             android:dividerHeight="0dp"
-            android:groupIndicator="@null"
             android:listSelector="#b6d49d"
             android:textSize="30sp" />
     </LinearLayout>
