--- a/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:text="@string/spot_name"
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="center_vertical"
@@ -32,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        android:text="@string/info"
         android:gravity="center_vertical"
         android:layout_marginTop="2dp"
         android:fontFamily="@font/enjoy"
