--- a/SignInWithGoogle/app/src/main/res/drawable-v24/border.xml
+++ b/SignInWithGoogle/app/src/main/res/drawable-v24/border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/menuColor" />
+            <solid android:color="#f7dc2b"  />
         </shape>
     </item>
     <item
